# agents-draft

./: .gitignore  README.md
langgraph-solution/: .env.example  README.md  main.py  pyproject.toml
langgraph-solution/src/: __init__.py  config.py  graph.py  llm.py  main.py  mcp_client.py  models.py
langgraph-solution/src/agents/: __init__.py  faq_agent.py  meter_reading_agent.py  prepayment_agent.py  supervisor_agent.py
langgraph-solution/src/tools/: __init__.py  common_tools.py  faq_tools.py  meter_reading_tools.py  prepayment_tools.py
pydantic-ai-solution/: .env.example  README.md  main.py  pyproject.toml
pydantic-ai-solution/src/: __init__.py  config.py  models.py
pydantic-ai-solution/src/agents/: __init__.py  faq_agent.py  meter_reading_agent.py  orchestrator.py  prepayment_agent.py
